Color change in First release of Class Survey

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    background-color:aquamarine;
+    background-image: linear-gradient(90deg, pink, yellow);
         }
         div {
       padding: 10px;
